# zero2robot

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci-cpu.yml  ci-notebook.yml  ci-playground.yml  deploy-playground.yml  deploy-site.yml
checkpoints/: models.yaml
curriculum/: __init__.py
curriculum/common/: __init__.py  assert_parity.py  device.py  export_onnx.py  seeding.py  wallclock.csv  wallclock.py
datasets/: datasets.yaml
grader/: __init__.py  __main__.py  api.py  check.py  contract.py  policy.py  sandbox.py  score.py  scoring.py  seeds.py  submission.py
grader/sandbox/: policy.yaml
grader/tests/: conftest.py  test_api.py  test_check.py  test_contract.py  test_scoring.py  test_seeds.py  test_submission.py
infra/ci/: check_demo_assets.py  check_draft_scaffolding.py  check_export_parity.py  check_forbidden_imports.py  check_loc_caps.py  check_notebook_hashes.py  check_prose_code_drift.py  check_prose_includes.py  check_wallclock_provenance.py  full_system_smoke.py  gen_notebook.py  run_notebooks.py  run_wallclock.py  (+1 more)
notebooks/: ch0.0-quickstart.ipynb  ch0.1-sim-loop.ipynb  ch0.2-scene.ipynb  ch0.3-transforms.ipynb  ch0.4-record.ipynb  ch0.5-inspect.ipynb  ch1.1-bc.ipynb  ch1.2-curate.ipynb  ch1.3-act.ipynb  ch1.4-diffusion.ipynb  ch1.5-flow.ipynb  ch1.6-harness.ipynb  ch1.7-vla-data.ipynb  ch1.8-vla.ipynb  ch1.9-bridge.ipynb  ch2.1-ppo.ipynb  ch2.2-sac.ipynb  ch2.3-mjx.ipynb  ch2.4-rewards.ipynb  ch2.5-walk.ipynb  ch2.6-perturb.ipynb  ch2.7-dr.ipynb  ch2.8-runtime.ipynb  ch3.1-world-models.ipynb  ch3.2-dreamer.ipynb  ch3.3-engine.ipynb  ch3.4-constraints.ipynb  ch3.5-contact.ipynb  ch3.6-compare.ipynb  ch3.7-scale-data.ipynb  ch3.8-frontier.ipynb  ch3.9-mpc.ipynb  ch4-offline-primer.ipynb  ch4.2-corrections.ipynb  ch4.3-serl.ipynb  ch5.1-vit.ipynb  ch5.2-align.ipynb  ch5.3-pixels.ipynb  ch5.4-vla-shape.ipynb  ch5.5-fast.ipynb  (+3 more)
playground/: TRAIN-LOOP.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: fetch_datasets.py  upload_datasets_hf.py  upload_models_hf.py
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
tests/: conftest.py
(+690 files in other folders)
